force-app/main/default/objects/Assortment_Detail__c/fields/Ass_BU_Cluster__c.field-meta.xml
<CustomField>
    <fullName>Ass_BU_Cluster__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BU Cluster</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Ass_BU_Cluster__c - Value does not exist or does not match filter criteria.</errorMessage>
        <filterItems>
            <field>Orga_BU__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Assortment Cluster, Assortment Cluster List</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Orga_BU__c</referenceTo>
    <relationshipLabel>Assortment BU Details</relationshipLabel>
    <relationshipName>Assortment_BU_Details</relationshipName>
    <type>Lookup</type>
</CustomField>