force-app/main/default/objects/Assortment_Detail__c/fields/Assortment_BU__c.field-meta.xml
<CustomField>
    <fullName>Assortment_BU__c</fullName>
    <label>Assortment BU</label>
    <referenceTo>Assortment_BU__c</referenceTo>
    <relationshipLabel>Assortment BU Details</relationshipLabel>
    <relationshipName>Assortment_BU_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>