force-app/main/default/objects/Assortment_Detail__c/fields/Assortment_type__c.field-meta.xml
<CustomField>
    <fullName>Assortment_type__c</fullName>
    <formula>Assortment_BU__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assortment type</label>
    <type>Text</type>
</CustomField>