force-app/main/default/objects/Assortment_Detail__c/fields/Avg_Weekly_Sales_Ext_ClientBased__c.field-meta.xml
<CustomField>
    <fullName>Avg_Weekly_Sales_Ext_ClientBased__c</fullName>
    <label>Avg Weekly Sales Ext ClientBased</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>