force-app/main/default/objects/Assortment_Detail__c/fields/BU_Source__c.field-meta.xml
<CustomField>
    <fullName>BU_Source__c</fullName>
    <formula>TEXT(1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BU Source</label>
    <type>Text</type>
</CustomField>