force-app/main/default/objects/Assortment_Detail__c/fields/BU_Target__c.field-meta.xml
<CustomField>
    <fullName>BU_Target__c</fullName>
    <formula>Assortment_BU__r.BU_Target__r.Name</formula>
    <label>BU Target</label>
    <type>Text</type>
</CustomField>