force-app/main/default/objects/Assortment_Detail__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Category</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Orga_HE__c.Level__c</field>
            <operation>equals</operation>
            <value>3,4</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Orga_HE__c</referenceTo>
    <relationshipLabel>Assortment BU Details</relationshipLabel>
    <relationshipName>Assortment_BU_Details</relationshipName>
    <type>Lookup</type>
</CustomField>