force-app/main/default/objects/Assortment_Detail__c/fields/Client_Ass__c.field-meta.xml
<CustomField>
    <fullName>Client_Ass__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Client_Ass</label>
    <type>Checkbox</type>
</CustomField>