force-app/main/default/objects/Assortment_Detail__c/fields/Client_Category__c.field-meta.xml
<CustomField>
    <fullName>Client_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Category</label>
    <referenceTo>Orga_HE__c</referenceTo>
    <relationshipLabel>Assortment Details (Client Category)</relationshipLabel>
    <relationshipName>Assortment_Details_Client_Category</relationshipName>
    <type>Lookup</type>
</CustomField>