force-app/main/default/objects/Assortment_Detail__c/fields/Client_Clust1__c.field-meta.xml
<CustomField>
    <fullName>Client_Clust1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Client Clust1</label>
    <type>Checkbox</type>
</CustomField>