force-app/main/default/objects/Assortment_Detail__c/fields/Client_Clust2__c.field-meta.xml
<CustomField>
    <fullName>Client_Clust2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Client Clust2</label>
    <type>Checkbox</type>
</CustomField>