force-app/main/default/objects/Assortment_Detail__c/fields/Client_Clust3__c.field-meta.xml
<CustomField>
    <fullName>Client_Clust3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Client Clust3</label>
    <type>Checkbox</type>
</CustomField>