force-app/main/default/objects/Assortment_Detail__c/fields/Client_Clust_Cplt1__c.field-meta.xml
<CustomField>
    <fullName>Client_Clust_Cplt1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Client Clust Cplt1</label>
    <type>Checkbox</type>
</CustomField>