force-app/main/default/objects/Assortment_Detail__c/fields/Client_Clust_Cplt3__c.field-meta.xml
<CustomField>
    <fullName>Client_Clust_Cplt3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Client Clust Cplt3</label>
    <type>Checkbox</type>
</CustomField>