force-app/main/default/objects/Assortment_Detail__c/fields/Client_Status__c.field-meta.xml
<CustomField>
    <fullName>Client_Status__c</fullName>
    <label>Client Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Keep</fullName>
                <color>#0B6FCE</color>
                <label>Keep</label>
            </value>
            <value>
                <fullName>Delete</fullName>
                <color>#78C953</color>
                <label>Delete</label>
            </value>
            <value>
                <fullName>New</fullName>
                <color>#E27001</color>
                <label>New</label>
            </value>
            <value>
                <fullName>Increase</fullName>
                <color>#A845DC</color>
                <label>Increase</label>
            </value>
            <value>
                <fullName>Decrease</fullName>
                <color>#F3D904</color>
                <label>Decrease</label>
            </value>
            <value>
                <fullName>Substitute</fullName>
                <color>#A53711</color>
                <label>Substitute</label>
            </value>
            <value>
                <fullName>Probably deleted</fullName>
                <color>#F96FB7</color>
                <label>Probably deleted</label>
            </value>
            <value>
                <fullName>Opportunity</fullName>
            </value>
            <value>
                <fullName>Cplt</fullName>
                <color>#A53711</color>
                <label>Complément</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>