force-app/main/default/objects/Assortment_Detail__c/fields/Fact_Client_PCB__c.field-meta.xml
<CustomField>
    <fullName>Fact_Client_PCB__c</fullName>
    <label>Fact Client PCB</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PCB</valueSetName>
    </valueSet>
</CustomField>