force-app/main/default/objects/Assortment_Detail__c/fields/Fact_Client_Retail_Price__c.field-meta.xml
<CustomField>
    <fullName>Fact_Client_Retail_Price__c</fullName>
    <label>Fact Client Retail Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>