force-app/main/default/objects/Assortment_Detail__c/fields/Fact_ND_MarketBased_Pts__c.field-meta.xml
<CustomField>
    <fullName>Fact_ND_MarketBased_Pts__c</fullName>
    <formula>Fact_ND_MarketBased__c * 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fact ND MarketBased (Pts)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>