force-app/main/default/objects/Assortment_Detail__c/fields/Fact_SellOut_Tone_SEQ__c.field-meta.xml
<CustomField>
    <fullName>Fact_SellOut_Tone_SEQ__c</fullName>
    <formula>Fact_SellOut_Quantity_SEQ__c *  Product__r.Total_Weight__c / 1000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fact SellOut Tone SEQ</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>