force-app/main/default/objects/Assortment_Detail__c/fields/Fact_ShelfNumber__c.field-meta.xml
<CustomField>
    <fullName>Fact_ShelfNumber__c</fullName>
    <label>Fact ShelfNumber</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>