force-app/main/default/objects/Assortment_Detail__c/fields/Fact_WD_ClientBased__c.field-meta.xml
<CustomField>
    <fullName>Fact_WD_ClientBased__c</fullName>
    <label>Fact WD ClientBased</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>