force-app/main/default/objects/Assortment_Detail__c/fields/Fact_WD_ClientBased_Pts__c.field-meta.xml
<CustomField>
    <fullName>Fact_WD_ClientBased_Pts__c</fullName>
    <formula>Fact_WD_ClientBased__c * 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fact WD ClientBased (Pts)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>