force-app/main/default/objects/Assortment_Detail__c/fields/Fact_WD_MarketBased_N2__c.field-meta.xml
<CustomField>
    <fullName>Fact_WD_MarketBased_N2__c</fullName>
    <label>Fact WD MarketBased N2</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>