force-app/main/default/objects/Assortment_Detail__c/fields/FactRefClientNDClientBasedPts__c.field-meta.xml
<CustomField>
    <fullName>FactRefClientNDClientBasedPts__c</fullName>
    <formula>FactRefClientNDClientBased__c * 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fact Ref Client ND ClientBased (Pts)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>