force-app/main/default/objects/Assortment_Detail__c/fields/InnoRanking__c.field-meta.xml
<CustomField>
    <fullName>InnoRanking__c</fullName>
    <description>Ranking of Innos for the choosen channel</description>
    <formula>/* Define the priority of the Product for the right channel
- The channel is the BU Target for Budget Assortment and the BU source for others
- Be careful the customer could choose to have different names for the BU Channel eg HMSM... you have to adapt the formula */


CASE(if( Assortment_type__c = &apos;Budget&apos;, Assortment_BU__r.BU_Target__r.Name , Assortment_BU__r.BU_source__r.Name ),
&apos;HM&apos;, text(Product__r.RankingHyper__c) ,
&apos;SM&apos;, text(Product__r.RankingSuper__c) ,
&apos;Proxi&apos;, text( Product__r.RankingConvenience__c ) ,
&apos;Drive&apos;, text( Product__r.RankingDrive__c ) ,
&apos;LAD&apos;, text( Product__r.RankingWeb__c ) ,
null)</formula>
    <label>Inno Ranking</label>
    <type>Text</type>
</CustomField>