force-app/main/default/objects/Assortment_Detail__c/fields/IsMaster_Higher_Level_Packaging__c.field-meta.xml
<CustomField>
    <fullName>IsMaster_Higher_Level_Packaging__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsMaster Higher Level Packaging</label>
    <type>Checkbox</type>
</CustomField>