force-app/main/default/objects/Assortment_Detail__c/fields/L4L_Client_WD_ClientBased__c.field-meta.xml
<CustomField>
    <fullName>L4L_Client_WD_ClientBased__c</fullName>
    <label>L4L Client WD ClientBased</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>