force-app/main/default/objects/Assortment_Detail__c/fields/Last_Month_update__c.field-meta.xml
<CustomField>
    <fullName>Last_Month_update__c</fullName>
    <label>Last Month update</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>