force-app/main/default/objects/Assortment_Detail__c/fields/Movement_Date_Month__c.field-meta.xml
<CustomField>
    <fullName>Movement_Date_Month__c</fullName>
    <formula>MONTH(Movement_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Movement Date Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>