force-app/main/default/objects/Assortment_Detail__c/fields/Movement_Date_Week__c.field-meta.xml
<CustomField>
    <fullName>Movement_Date_Week__c</fullName>
    <formula>MOD(FLOOR( (Movement_Date__c -DATEVALUE(&quot;2006-01-01&quot; ))/7),52)+1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Movement Date Week</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>