force-app/main/default/objects/Assortment_Detail__c/fields/New_Client_LM__c.field-meta.xml
<CustomField>
    <fullName>New_Client_LM__c</fullName>
    <defaultValue>1</defaultValue>
    <label>New Client LM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>