force-app/main/default/objects/Assortment_Detail__c/fields/New_Client_ND_ClientBased_Pts__c.field-meta.xml
<CustomField>
    <fullName>New_Client_ND_ClientBased_Pts__c</fullName>
    <formula>New_Client_ND_ClientBased__c * 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Client ND ClientBased (Pts)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>