force-app/main/default/objects/Assortment_Detail__c/fields/New_Client_ProductNumber__c.field-meta.xml
<CustomField>
    <fullName>New_Client_ProductNumber__c</fullName>
    <label>New Client ProductNumber</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>