force-app/main/default/objects/Assortment_Detail__c/fields/New_Client_ProductNumber_Gap__c.field-meta.xml
<CustomField>
    <fullName>New_Client_ProductNumber_Gap__c</fullName>
    <formula>New_Client_ProductNumber__c - Ref_Client_ProductNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Client ProductNumber Gap</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>