force-app/main/default/objects/Assortment_Detail__c/fields/New_Client_Quantity_YE__c.field-meta.xml
<CustomField>
    <fullName>New_Client_Quantity_YE__c</fullName>
    <label>New Client Quantity YE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>