force-app/main/default/objects/Assortment_Detail__c/fields/New_Client_Tone_YE__c.field-meta.xml
<CustomField>
    <fullName>New_Client_Tone_YE__c</fullName>
    <formula>New_Client_Quantity_YE__c * Product__r.Total_Weight__c / 1000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Client Tone YE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>