force-app/main/default/objects/Assortment_Detail__c/fields/New_Client_Unit_Cost__c.field-meta.xml
<CustomField>
    <fullName>New_Client_Unit_Cost__c</fullName>
    <label>New Unit Cost (Client)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>