force-app/main/default/objects/Assortment_Detail__c/fields/New_Client_WD_ClientBased_Net_Pts__c.field-meta.xml
<CustomField>
    <fullName>New_Client_WD_ClientBased_Net_Pts__c</fullName>
    <formula>If( CONTAINS(Client_Name__c, &apos;National&apos;), New_Client_WD_ClientBased__c/16,
  If( CONTAINS(Client_Name__c, &apos;Intermarché&apos;), New_Client_WD_ClientBased__c/4, New_Client_WD_ClientBased__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Client WD ClientBased Net (Pts)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>