force-app/main/default/objects/Assortment_Detail__c/fields/New_Client_WD_MarketBased_Gap_LowLimit__c.field-meta.xml
<CustomField>
    <fullName>New_Client_WD_MarketBased_Gap_LowLimit__c</fullName>
    <formula>New_Client_WD_MarketBased_Pts__c - Product__r.WD_Marketbased_Low_Limit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Client WD MarketBased Gap LowLimit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>