force-app/main/default/objects/Assortment_Detail__c/fields/New_Client_WD_MarketBased_Gap_NegoTarget__c.field-meta.xml
<CustomField>
    <fullName>New_Client_WD_MarketBased_Gap_NegoTarget__c</fullName>
    <formula>(New_Client_WD_MarketBased__c - Ref_Corp_WD_MarketBased__c)*100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Client WD MarketBased Gap NegoTarget</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>