force-app/main/default/objects/Assortment_Detail__c/fields/New_Client_WD_MarketBased_N1__c.field-meta.xml
<CustomField>
    <fullName>New_Client_WD_MarketBased_N1__c</fullName>
    <label>New Client WD MarketBased N1</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>