force-app/main/default/objects/Assortment_Detail__c/fields/New_Corp_ND_ClientBased__c.field-meta.xml
<CustomField>
    <fullName>New_Corp_ND_ClientBased__c</fullName>
    <label>New Corp ND ClientBased</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>