force-app/main/default/objects/Assortment_Detail__c/fields/New_Corp_ND_ClientBased_pts__c.field-meta.xml
<CustomField>
    <fullName>New_Corp_ND_ClientBased_pts__c</fullName>
    <formula>New_Corp_ND_ClientBased__c * 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Corp ND ClientBased (pts)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>