force-app/main/default/objects/Assortment_Detail__c/fields/New_Corp_WD_ClientBased_Gap__c.field-meta.xml
<CustomField>
    <fullName>New_Corp_WD_ClientBased_Gap__c</fullName>
    <formula>(New_Corp_WD_ClientBased__c - Ref_Client_WD_ClientBased_Nego__c)*100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Corp WD ClientBased Gap</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>