force-app/main/default/objects/Assortment_Detail__c/fields/New_Corp_WD_MarketBased__c.field-meta.xml
<CustomField>
    <fullName>New_Corp_WD_MarketBased__c</fullName>
    <label>New Corp WD MarketBased</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>