force-app/main/default/objects/Assortment_Detail__c/fields/New_Corp_WD_MarketBased_Pts__c.field-meta.xml
<CustomField>
    <fullName>New_Corp_WD_MarketBased_Pts__c</fullName>
    <formula>New_Corp_WD_MarketBased__c * 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Corp WD MarketBased (Pts)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>