force-app/main/default/objects/Assortment_Detail__c/fields/NewClientNDCltBasedPtsGapNegoP1__c.field-meta.xml
<CustomField>
    <fullName>NewClientNDCltBasedPtsGapNegoP1__c</fullName>
    <formula>New_Client_ND_ClientBased_Pts__c/*-TMP_DN_1_Nego_Ensg__c*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Client ND CltBased Pts Gap Nego N-1</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>