force-app/main/default/objects/Assortment_Detail__c/fields/NewClientWDClientBasedPtsGapNegoP1__c.field-meta.xml
<CustomField>
    <fullName>NewClientWDClientBasedPtsGapNegoP1__c</fullName>
    <formula>New_Client_WD_ClientBased_Pts__c-Ref_Client_WD_ClientBased_Nego_Pts__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Client WD CltBased Pts GapNego N-1</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>